fix：优化代码，HTTP和IP工具类